Add basic support for showing current frame state. Show parent threads in call stack